text area wrap fixed

--- a/src/pages/createStory/CreateStory.css
+++ b/src/pages/createStory/CreateStory.css
@@ -137,8 +137,24 @@ textarea:focus {
   margin-bottom: 10px;
 }
 
-.userName {
+/* .userName {
   font-size: 16px;
   font-weight: bold;
   color: #333;
+} */
+
+#paragraph {
+  font-family: Georgia, serif;
+  font-size: 18px;
+  font-weight: normal;
+  color: #333;
+  margin: 0;
+  padding-top: 10px;
+  text-align: justify; /* Justify the text to improve readability */
+  word-wrap: break-word; /* Enable word wrapping */
+}
+/* TODO: Too long of a paragraph will go up beyong the limits of the screen */
+.paragraph-wrapper {
+  max-width: 600px; /* Adjust the value as per your desired width */
+  margin: 0 auto; /* Center the paragraph within its container */
 }
